--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -171,7 +171,7 @@ input, select, textarea {
 	}
 
 	p {
-		margin: 0 0 2rem 0;
+		margin: 0 0 1rem 0;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -653,7 +653,7 @@ input, select, textarea {
 			display: block;
 			height: 100%;
 			left: 0;
-			opacity: 0.5;
+			opacity: 0.0;
 			position: absolute;
 			top: 0;
 			width: 100%;
@@ -665,33 +665,147 @@ input, select, textarea {
 		}
 
 		.image.left, .image.right {
-			max-width: 40%;
+			max-width: 47.5%;
+			height: 200px;
 		}
 
 			.image.left img, .image.right img {
 				width: 100%;
+				height: 100%;
 			}
+
+		
+			/* #myImgL, #myImgR {
+			border-radius: 5px;
+			cursor: pointer;
+			transition: 0.3s;
+		}
+
+			#myImgL1, #myImgR1 {
+			border-radius: 5px;
+			cursor: pointer;
+			transition: 0.3s;
+		}
+			#myImg3 {
+			border-radius: 5px;
+			cursor: pointer;
+			transition: 0.3s;
+		}
+			
+			#myImgL:hover, #myImgR:hover {opacity: 0.7; width: 200%; height: 200%;}
+			#myImgL1:hover, #myImgR1:hover {opacity: 0.7;}
+			#myImg3:hover {opacity: 0.7;} */
+
+			/* The Modal (background) */
+		/* .modal {
+			display: none; 
+			position: relative; 
+			z-index: 9999; 
+			padding-top: 50px; 
+			padding-left: 50px;
+			padding-right: 50px;
+			top: 50%;
+			left: 50%;
+			width: 750px; 
+			max-width: 100%;
+			overflow: auto; 
+			background-color: rgb(0,0,0); 
+			background-color: rgba(0,0,0,0.90);
+		}
+
+	/* Modal Content (Image) 
+			.modal-content {
+				margin: auto;
+				display: block;
+				width: 750px;
+				max-width: 100%;
+			}
+
+	/* Caption of Modal Image (Image Text) - Same Width as the Image 
+		#caption {
+			margin: auto;
+			display: block;
+			width: 100%;
+			max-width: 700px;
+			text-align: left;
+			color: #ccc;
+			padding: 10px 0;
+			height: 100px;
+		}
+
+	/* Add Animation - Zoom in the modal 
+		.modal-content, #caption {
+			-webkit-animation-name: zoom;
+			-webkit-animation-duration: 0.6s;
+			animation-name: zoom;
+			animation-duration: 0.6s;
+		}
+
+		@-webkit-keyframes zoom {
+			from {-webkit-transform:scale(0)} 
+			to {-webkit-transform:scale(1)}
+		}
+
+		@keyframes zoom {
+			from {transform:scale(0)} 
+			to {transform:scale(1)}
+		}
+
+		/* The Close Button 
+		.close {
+			position: absolute;
+			top: 15px;
+			right: 35px;
+			color: #f1f1f1;
+			font-size: 20px;
+			font-weight: bold;
+			transition: 0.3s;
+		}
+
+		.close:hover,
+		.close:focus {
+			color: #bbb;
+			text-decoration: none;
+			cursor: pointer;
+		}
+
+	/* 100% Image Width on Smaller Screens
+		@media only screen and (max-width: 700px){
+			.modal-content {
+			width: 100%;
+			}
+		} */
 
 		.image.left {
 			float: left;
-			padding: 0 1.5em 1em 0;
-			top: 0.25em;
+			padding: 0 0em 1em 0;
+			top: 0;
 		}
+		.image.left:hover {width: 200%; height: 200%;}
 
 		.image.right {
 			float: right;
-			padding: 0 0 1em 1.5em;
-			top: 0.25em;
+			padding: 0 0 1em 0;
+			top: 0;
 		}
 
 		.image.fit {
 			display: block;
 			margin: 0 0 2rem 0;
 			width: 100%;
+			text-align: center;
 		}
+		.image.fit:hover {width: 200%; height: 200%; left:-50%}
+
+		.center {
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+			width: 50%;
+		  }
 
 			.image.fit img {
-				width: 100%;
+				width: 50%;
 			}
 
 		.image.main {
@@ -703,15 +817,15 @@ input, select, textarea {
 			.image.main img {
 				width: 100%;
 			}
-
-		@media screen and (max-width: 736px) {
+		
+			@media screen and (max-width: 736px) {
 
 			.image.main {
 				margin: 2rem 0;
 			}
 
 		}
-
+		
 		@media screen and (max-width: 480px) {
 
 			.image.main {
@@ -719,6 +833,7 @@ input, select, textarea {
 			}
 
 		}
+
 
 /* List */
 
