--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1032,24 +1032,22 @@ input, select, textarea {
 		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		background-color: transparent;
-		border-radius: 4px;
+		border-radius: 3px;
 		border: 0;
-		box-shadow: inset 0 0 0 1px #ffffff;
+		box-shadow: inset 0 0 0 2px #ffffff;
 		color: #ffffff !important;
 		cursor: pointer;
-		display: inline-block;
+		display: inline-flex; 
 		font-size: 0.8rem;
 		font-weight: 300;
-		height: 2.75rem;
-		letter-spacing: 0.2rem;
-		line-height: 2.75rem;
+		height: 2.1rem;
 		outline: 0;
-		padding: 0 1.25rem 0 1.35rem;
+		padding: 0 1.0rem 2.5rem 1.0rem;
 		text-align: center;
 		text-decoration: none;
-		text-transform: uppercase;
+		text-transform: none;
 		white-space: nowrap;
-	}
+	  }
 
 		input[type="submit"]:hover,
 		input[type="reset"]:hover,
@@ -1680,3 +1678,14 @@ input, select, textarea {
 		body.is-preload #footer {
 			opacity: 0;
 		}
+
+		.read-more-container, .read-less-button {
+			display: none;
+		}
+
+		button.read-more-button, button.read-less-button {
+			border: none;
+			background-color: transparent;
+			color: inherit;
+			cursor: pointer;
+		  }
