--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -645,8 +645,9 @@ input, select, textarea {
 	.image {
 		border-radius: 4px;
 		border: 0;
-		display: inline-block;
+		display: block;
 		position: relative;
+		cursor: pointer;
 	}
 
 		.image:before {
@@ -668,7 +669,7 @@ input, select, textarea {
 			border-radius: 4px;
 			display: block;
 		}
-
+		
 		.image.left, .image.right {
 			max-width: 47.5%;
 			height: 200px;
@@ -700,7 +701,28 @@ input, select, textarea {
 			cursor: pointer;
 		}
 		
-		.image.fit:hover {opacity: 0.7;}
+		.image.fit:hover {opacity: 0.7;}		
+
+		.center {
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+			width: 100%;
+		  }
+
+			.image.fit img {
+				width: 75%;
+			}
+
+		.image.main {
+			display: block;
+			margin: 2.5rem 0;
+			width: 100%;
+		}
+
+			.image.main img {
+				width: 100%;
+			}
 		
 			@media screen and (max-width: 736px) {
 
